--- a/requirements.txt
+++ b/requirements.txt
@@ -15,8 +15,9 @@ gevent-websocket
 wsaccel
 ujson
 phue
+PyDispatcher
 python_openzwave
--e git://github.com/jcollie/pyjnest.git#egg=pyjnest
+-e git+https://github.com/jcollie/pyjnest.git#egg=pyjnest
 -e git+https://github.com/zonyl/pyharmony.git#egg=pyharmony
 interruptingcow
 #-e git+https://github.com/pettazz/pygooglevoice.git#egg=pygooglevoice
