--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,19 @@
 #To install please use: 
-#  $ pip install -r requirements.txt
+#  $ pip3 install -r requirements.txt
 apscheduler
 pytz
-mock
 pyephem
 pyserial
-twisted
-#xmpppy
-#for nest
-#eusful==0.6
-#pyenest
 requests
 gevent-websocket
 wsaccel
 ujson
+twisted
+mock
+xmpppy
 phue
 python_openzwave
 -e git+https://github.com/jcollie/pyjnest.git#egg=pyjnest
 -e git+https://github.com/zonyl/pyharmony.git#egg=pyharmony
 interruptingcow
-#-e git+https://github.com/pettazz/pygooglevoice.git#egg=pygooglevoice
--e git+https://github.com/MikeRixWolfe/pygooglevoice.git#egg=pygooglevoice
+-e git+https://github.com/pettazz/pygooglevoice.git#egg=pygooglevoice
